--- a/style.css
+++ b/style.css
@@ -67,9 +67,9 @@ body {
   background: grey;
   color: white;
   text-shadow: 2px 2px 0px #000;
-  font-size: 18pt;
-  padding: 10px 12px;
-  margin: 5px; 
+  font-size: 14pt;
+  padding: 6px 12px;
+  margin: 14px 0px 0px 0px;
   border: none;
   transition: .2s;
   -webkit-box-shadow: 0px 3px 13px -4px rgba(0,0,0,0.4);
